--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@uniswap/swap-router-contracts",
+  "name": "@thinkincoin-libs/swap-router-contracts",
   "description": "Smart contracts for swapping on Uniswap V2 and V3",
   "license": "GPL-2.0-or-later",
   "publishConfig": {
     "access": "public"
   },
   "version": "1.3.0",
-  "homepage": "https://uniswap.org",
+  "homepage": "https://thinkincoin.com",
   "keywords": [
     "uniswap",
     "v2",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/swap-router-contracts"
+    "url": "https://github.com/thinkincoin/swap-router-contracts"
   },
   "files": [
     "contracts/base",
