--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.3.0",
+  "version": "1.0.1",
   "homepage": "https://thinkincoin.com",
   "keywords": [
     "uniswap",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/thinkincoin/swap-router-contracts"
+    "url": "https://github.com/Thinkincoin/swap-router-contracts"
   },
   "files": [
     "contracts/base",
@@ -30,9 +30,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "3.4.2-solc-0.7",
-    "@thinkincoin-libs/uniswap-v2-core": "1.0.2",
-    "@thinkincoin-libs/uniswap-v3-core": "1.0.2",
-    "@thinkincoin-libs/uniswap-v3-periphery": "1.4.5",
+    "@uniswap/v2-core": "1.0.1",
+    "@uniswap/v3-core": "1.0.0",
+    "@uniswap/v3-periphery": "1.4.1",
     "dotenv": "^14.2.0",
     "hardhat-watcher": "^2.1.1"
   },
